add hero text and hero div
add first main div for hero text and image placeholder

--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Landing Page</title>
         <link rel="stylesheet" href="styles.css">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="https://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900" rel="stylesheet">
     </head>
 
     <body>
         <div class="header">
-            <div class="logo">  Header Logo</div>
+            <div class="logo">Header Logo</div>
             <div>
                 <ul class="header-links">
                     <li>header link one</li>
@@ -19,5 +21,17 @@
                 </ul>
             </div>
         </div>
+
+        <div class="hero">
+            <div class="left-text">
+                <p class="hero-text">This website is awesome</p>
+                <p class="hero-subtext">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast</p>
+                <button class="button">Sign up</button>
+            </div>
+            <div class="placeholder">
+                <p>this is a placeholder for an image</p>
+            </div>
+        </div>
+
     </body>
 </html>
