style information cards and add/style divs for quote, call to action, and footer

--- a/index.html
+++ b/index.html
@@ -33,5 +33,53 @@
             </div>
         </div>
 
+        <div class="card-div">
+            <div class="card-header">Some Random Information</div>
+            <div class="cards">
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration of an image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration of an image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration of an image</p>
+                </div>
+                <div class="card">
+                    <div class="box"></div>
+                    <p>this is some subtext under an illustration of an image</p>
+                </div>
+            </div>
+        </div>
+
+        <div class="quote-div">
+            <div class="quote-container">
+                <p class="quote">This is an inspiring quote, or a testimonial of some sort. Maybe it's just filling up space? Who knows? I know. It is just filling up space. Do people actually care about this kind of stuff?</p>
+                <p class="author">- Thor, god of thunder</p>
+            </div>
+        </div>
+
+        <div class="call-div">
+            <div class="blue-call-div">
+                <div class="call-text">
+                    <div class="call-header">
+                        Call to action! It's time!
+                    </div>
+                    <div class="call-subtext">
+                        Sign up for our product by clicking that button right over there!
+                    </div>
+                </div>
+                <div class="button button2">
+                    Sign Up
+                </div>
+            </div>
+        </div>
+
+        <div class="footer">
+            Copyright (c) The Odin Project
+        </div>
     </body>
 </html>
